retrieveUnpackaged/objects/Service_Links__mdt.object
<CustomObject>
    <description>Links based on credential type or program area</description>
    <fields>
        <fullName>Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credential_Type__c</fullName>
        <label>Credential Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dwelling Contractor</fullName>
                    <default>true</default>
                    <label>Dwelling Contractor</label>
                </value>
                <value>
                    <fullName>Manufactured Homes Credential</fullName>
                </value>
                <value>
                    <fullName>Soil Professions</fullName>
                </value>
                <value>
                    <fullName>Uniform Dwelling Code</fullName>
                </value>
                <value>
                    <fullName>Manufactured Homes Titling</fullName>
                </value>
                <value>
                    <fullName>Delegated Municipality Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <label>Credential</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UDC Construction Inspector</fullName>
                    <default>true</default>
                    <label>UDC Construction Inspector</label>
                </value>
                <value>
                    <fullName>Dwelling Contractor</fullName>
                </value>
                <value>
                    <fullName>Dwelling Contractor Qualifier</fullName>
                </value>
                <value>
                    <fullName>Dwelling Contractor Restricted</fullName>
                </value>
                <value>
                    <fullName>UDC Electrical Inspector</fullName>
                </value>
                <value>
                    <fullName>UDC HVAC Inspector</fullName>
                </value>
                <value>
                    <fullName>UDC Inspection Agency</fullName>
                </value>
                <value>
                    <fullName>Manufactured Homes Dealer</fullName>
                </value>
                <value>
                    <fullName>Manufactured Homes Installer</fullName>
                </value>
                <value>
                    <fullName>Manufactured Homes Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Manufactured Homes Salesperson</fullName>
                </value>
                <value>
                    <fullName>UDC Plumbing Inspector</fullName>
                </value>
                <value>
                    <fullName>Soil Erosion Inspector</fullName>
                </value>
                <value>
                    <fullName>Soil Tester</fullName>
                </value>
                <value>
                    <fullName>Manufactured Homes Certificate of Title</fullName>
                </value>
                <value>
                    <fullName>Delegated Agent - Commercial Building</fullName>
                </value>
                <value>
                    <fullName>Delegated Agent - Fire Suppression/Alarm Systems</fullName>
                </value>
                <value>
                    <fullName>Delegated Agent - Plumbing</fullName>
                </value>
                <value>
                    <fullName>Delegated Agent - POWTS</fullName>
                </value>
                <value>
                    <fullName>Delegated Agent - Elevator</fullName>
                </value>
                <value>
                    <fullName>Delegated Agent - Boiler</fullName>
                </value>
                <value>
                    <fullName>Delegated Agent - Other</fullName>
                </value>
                <value>
                    <fullName>Construction Inspector</fullName>
                    <isActive>false</isActive>
                    <label>Construction Inspector</label>
                </value>
                <value>
                    <fullName>Delegated Agent - Fire Supression/Alarm Systems</fullName>
                    <isActive>false</isActive>
                    <label>Delegated Agent - Fire Supression/Alarm Systems</label>
                </value>
                <value>
                    <fullName>Electrical Inspector</fullName>
                    <isActive>false</isActive>
                    <label>Electrical Inspector</label>
                </value>
                <value>
                    <fullName>HVAC Inspector</fullName>
                    <isActive>false</isActive>
                    <label>HVAC Inspector</label>
                </value>
                <value>
                    <fullName>Inspection Agency</fullName>
                    <isActive>false</isActive>
                    <label>Inspection Agency</label>
                </value>
                <value>
                    <fullName>Manufactured Home Certificate of Title</fullName>
                    <isActive>false</isActive>
                    <label>Manufactured Home Certificate of Title</label>
                </value>
                <value>
                    <fullName>Plumbing Inspector</fullName>
                    <isActive>false</isActive>
                    <label>Plumbing Inspector</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Credential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Credential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>OrderNumber</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permit_Type__c</fullName>
        <description>Permit Type</description>
        <label>Permit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POWTS Individual Site Design</fullName>
                    <default>true</default>
                    <label>POWTS Individual Site Design</label>
                </value>
                <value>
                    <fullName>POWTS Component Manual Design</fullName>
                </value>
                <value>
                    <fullName>POWTS Petition for Variance</fullName>
                </value>
                <value>
                    <fullName>POWTS Experimental System</fullName>
                </value>
                <value>
                    <fullName>POWTS Miscellaneous Review</fullName>
                </value>
                <value>
                    <fullName>POWTS Sanitary Permit</fullName>
                </value>
                <value>
                    <fullName>POWTS State-Owned Privy Registration</fullName>
                </value>
                <value>
                    <fullName>POWTS Consultation</fullName>
                </value>
                <value>
                    <fullName>POWTS Component Manual Review</fullName>
                </value>
                <value>
                    <fullName>POWTS Soil Saturation Determination</fullName>
                </value>
                <value>
                    <fullName>Manufactured Home Certificate of Title</fullName>
                </value>
                <value>
                    <fullName>Wisconsin Uniform Building Permit</fullName>
                </value>
                <value>
                    <fullName>Wisconsin Uniform Camping Permit</fullName>
                </value>
                <value>
                    <fullName>UDC Permit to Start - Footings and Foundations</fullName>
                </value>
                <value>
                    <fullName>UDC Construction</fullName>
                </value>
                <value>
                    <fullName>UDC HVAC</fullName>
                </value>
                <value>
                    <fullName>UDC Electric</fullName>
                </value>
                <value>
                    <fullName>UDC Plumbing</fullName>
                </value>
                <value>
                    <fullName>UDC Soil Erosion Control</fullName>
                </value>
                <value>
                    <fullName>UDC Other</fullName>
                </value>
                <value>
                    <fullName>Manufactured Homes Community Permit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Area__c</fullName>
        <description>Program Area</description>
        <label>Program Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POWTS</fullName>
                    <default>true</default>
                    <label>POWTS</label>
                </value>
                <value>
                    <fullName>Manufactured Homes Communities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Request_Type__c</fullName>
        <label>Service Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Name</fullName>
                    <default>true</default>
                    <label>Change Name</label>
                </value>
                <value>
                    <fullName>Withdraw Application</fullName>
                </value>
                <value>
                    <fullName>Submit Additional Documentation</fullName>
                </value>
                <value>
                    <fullName>Change in Status</fullName>
                </value>
                <value>
                    <fullName>Change Address</fullName>
                </value>
                <value>
                    <fullName>Exam Re-Application</fullName>
                </value>
                <value>
                    <fullName>Relinquish Delegated Agent Status</fullName>
                </value>
                <value>
                    <fullName>Manage Affiliations</fullName>
                </value>
                <value>
                    <fullName>Schedule Plan Review</fullName>
                </value>
                <value>
                    <fullName>Priority Plan Review</fullName>
                </value>
                <value>
                    <fullName>Public Health Emergency Plan Review</fullName>
                </value>
                <value>
                    <fullName>Manufactured Homes Title Modification</fullName>
                </value>
                <value>
                    <fullName>Relinquish Delegated Admin Status</fullName>
                    <isActive>false</isActive>
                    <label>Relinquish Delegated Admin Status</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Links</label>
    <listViews>
        <fullName>Change_Address</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Credential__c</columns>
        <columns>Permit_Type__c</columns>
        <columns>NamespacePrefix</columns>
        <columns>Application__c</columns>
        <columns>Existing_Credential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>Change Address</value>
        </filters>
        <label>Change Address</label>
    </listViews>
    <listViews>
        <fullName>Change_Name</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Credential__c</columns>
        <columns>Permit_Type__c</columns>
        <columns>NamespacePrefix</columns>
        <columns>Application__c</columns>
        <columns>Existing_Credential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>Change Name</value>
        </filters>
        <label>Change Name</label>
    </listViews>
    <listViews>
        <fullName>Change_in_Status</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Credential__c</columns>
        <columns>Permit_Type__c</columns>
        <columns>NamespacePrefix</columns>
        <columns>Application__c</columns>
        <columns>Existing_Credential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>Change Status</value>
        </filters>
        <label>Change in Status</label>
    </listViews>
    <listViews>
        <fullName>Exam_Re_Application</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Credential__c</columns>
        <columns>Permit_Type__c</columns>
        <columns>NamespacePrefix</columns>
        <columns>Application__c</columns>
        <columns>Existing_Credential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>Exam Re-Application</value>
        </filters>
        <label>Exam Re-Application</label>
    </listViews>
    <listViews>
        <fullName>Manage_Affiliation</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Credential__c</columns>
        <columns>Permit_Type__c</columns>
        <columns>NamespacePrefix</columns>
        <columns>Application__c</columns>
        <columns>Existing_Credential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Request_Type__c</field>
            <operation>contains</operation>
            <value>Manage Affiliation</value>
        </filters>
        <label>Manage Affiliation</label>
    </listViews>
    <listViews>
        <fullName>Relinquish_Delegated_Agent_Status</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Credential__c</columns>
        <columns>Permit_Type__c</columns>
        <columns>NamespacePrefix</columns>
        <columns>Application__c</columns>
        <columns>Existing_Credential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>Relinquish Delegated Agent Status</value>
        </filters>
        <label>Relinquish Delegated Agent Status</label>
    </listViews>
    <listViews>
        <fullName>Submit_Additional_Documentation</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Credential__c</columns>
        <columns>Permit_Type__c</columns>
        <columns>NamespacePrefix</columns>
        <columns>Application__c</columns>
        <columns>Existing_Credential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>Submit Additional</value>
        </filters>
        <label>Submit Additional Documentation</label>
    </listViews>
    <listViews>
        <fullName>Title_Modification</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Credential__c</columns>
        <columns>Permit_Type__c</columns>
        <columns>NamespacePrefix</columns>
        <columns>Application__c</columns>
        <columns>Existing_Credential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>Title Modification</value>
        </filters>
        <label>Title Modification</label>
    </listViews>
    <listViews>
        <fullName>Withdraw_Application</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Credential__c</columns>
        <columns>Permit_Type__c</columns>
        <columns>NamespacePrefix</columns>
        <columns>Application__c</columns>
        <columns>Existing_Credential__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>Withdraw Application</value>
        </filters>
        <label>Withdraw Application</label>
    </listViews>
    <pluralLabel>Service Links</pluralLabel>
</CustomObject>